--- a/ui/src/app/data-explorer/components/panel/data-explorer-dashboard-panel.component.html
+++ b/ui/src/app/data-explorer/components/panel/data-explorer-dashboard-panel.component.html
@@ -28,7 +28,10 @@
                         </button>
                     </div>
                 </div>
-                <sp-data-explorer-designer-panel [currentlyConfiguredWidget]="currentlyConfiguredWidget" fxFlex="100">
+                <sp-data-explorer-designer-panel
+                        [currentlyConfiguredWidget]="currentlyConfiguredWidget"
+                        [persistedDataStream]="persistedDataStream"
+                        fxFlex="100">
 
                 </sp-data-explorer-designer-panel>
             </div>
