--- a/ui/src/app/data-explorer/components/widget/data-explorer-dashboard-widget.component.scss
+++ b/ui/src/app/data-explorer/components/widget/data-explorer-dashboard-widget.component.scss
@@ -19,7 +19,7 @@
 @import '../../../../scss/variables';
 
 .gridster-item-content {
-    background: var(--color-bg-0);
+    //background: var(--color-bg-0);
 }
 
 .h-100 {
