--- a/ui/src/app/data-explorer/dialogs/add-widget/data-explorer-add-visualization-dialog.component.html
+++ b/ui/src/app/data-explorer/dialogs/add-widget/data-explorer-add-visualization-dialog.component.html
@@ -37,7 +37,8 @@
                             <div mat-list-avatar
                                  class="pipeline-avatar sp-accent-bg">{{iconText(dataSet.measureName)}}
                             </div>
-                            <h4 mat-line>{{dataSet.measureName}}</h4>
+                            <h4 mat-line>{{dataSet.pipelineName}}</h4>
+                            <p mat-line>{{dataSet.measureName}} </p>
                         </mat-list-item>
                     </mat-list>
                 </div>
