--- a/ui/src/app/data-explorer/components/designer-panel/data-settings/data-explorer-widget-data-settings.component.scss
+++ b/ui/src/app/data-explorer/components/designer-panel/data-settings/data-explorer-widget-data-settings.component.scss
@@ -15,3 +15,12 @@
  * limitations under the License.
  *
  */
+
+.pipeline-name {
+  font-weight: bold;
+}
+
+.measure-name {
+  font-weight: normal;
+
+}
