--- a/ui/src/app/data-explorer/components/widget/data-explorer-dashboard-widget.component.html
+++ b/ui/src/app/data-explorer/components/widget/data-explorer-dashboard-widget.component.html
@@ -17,11 +17,11 @@
   -->
 
 <div class="h-100">
-    <div class="box">
+    <div class="box" [ngStyle]="{background: configuredWidget.baseAppearanceConfig.backgroundColor, color: configuredWidget.baseAppearanceConfig.textColor}">
         <div class="widget-header">
         <div class="m-0 row header h-40" *ngIf="editMode">
             <div fxFlex="100" fxLayout="row" fxLayoutAlign="start center" class="widget-header-text">
-                {{ configuredWidget.dataLakeMeasure.measureName }}
+                {{ configuredWidget.baseAppearanceConfig.widgetTitle }}
             </div>
             <div fxFlex="100" fxLayout="row" fxLayoutAlign="end center" *ngIf="editMode">
                 <button mat-icon-button (click)="triggerWidgetEditMode()">
@@ -53,7 +53,10 @@
                             [gridsterItemComponent]="gridsterItemComponent"
                             [editMode]="editMode"
                             [dataViewDashboardItem]="widget"
-                            [dataExplorerWidget]="configuredWidget" class="h-100"></sp-data-explorer-table-widget>
+                            [dataExplorerWidget]="configuredWidget"
+                            [persistedDataStream]="persistedDataStream"
+                            class="h-100">
+                    </sp-data-explorer-table-widget>
                 </div>
                 <div *ngIf="configuredWidget.widgetType === 'line-chart'" class="h-100 p-0">
                     <sp-data-explorer-line-chart-widget
@@ -63,7 +66,10 @@
                             [gridsterItemComponent]="gridsterItemComponent"
                             [editMode]="editMode"
                             [dataViewDashboardItem]="widget"
-                            [dataExplorerWidget]="configuredWidget" class="h-100"></sp-data-explorer-line-chart-widget>
+                            [dataExplorerWidget]="configuredWidget"
+                            [persistedDataStream]="persistedDataStream"
+                            class="h-100">
+                    </sp-data-explorer-line-chart-widget>
                 </div>
                 <div *ngIf="configuredWidget.widgetType === 'image'" class="h-100 p-0">
                     <sp-data-explorer-image-widget
