--- a/ui/src/app/data-explorer/components/panel/data-explorer-dashboard-panel.component.html
+++ b/ui/src/app/data-explorer/components/panel/data-explorer-dashboard-panel.component.html
@@ -30,7 +30,7 @@
                 </div>
                 <sp-data-explorer-designer-panel
                         [currentlyConfiguredWidget]="currentlyConfiguredWidget"
-                        [persistedDataStream]="persistedDataStream"
+                        [dataLakeMeasure]="dataLakeMeasure"
                         fxFlex="100">
 
                 </sp-data-explorer-designer-panel>
