[STREAMPIPES-402] Move table widget config to config panel

--- a/ui/src/app/data-explorer/components/designer-panel/data-explorer-designer-panel.component.html
+++ b/ui/src/app/data-explorer/components/designer-panel/data-explorer-designer-panel.component.html
@@ -36,7 +36,7 @@
             <div *ngIf="selectedIndex == 1">
                 Visualization
                 <div *ngIf="currentlyConfiguredWidget.widgetType === 'table'" class="h-100 p-0">
-                    <sp-data-explorer-table-widget-config>
+                    <sp-data-explorer-table-widget-config [currentlyConfiguredWidget]="currentlyConfiguredWidget" [dataLakeMeasure]="dataLakeMeasure">
 
                     </sp-data-explorer-table-widget-config>
                 </div>
