--- a/ui/src/app/data-explorer/components/panel/data-explorer-dashboard-panel.component.html
+++ b/ui/src/app/data-explorer/components/panel/data-explorer-dashboard-panel.component.html
@@ -18,7 +18,7 @@
 
 <div fxFlex="100" fxLayout="column">
     <mat-drawer-container class="designer-panel-container h-100 dashboard-grid">
-        <mat-drawer #designerDrawer mode="side" opened position="end" class="designer-panel">
+        <mat-drawer #designerDrawer mode="side" position="end" class="designer-panel">
             <div fxLayout="column" fxFlex>
                 <div fxLayout="row" class="sp-tab-bg designer-panel-header">
                     <div fxLayoutAlign="start center" class="designer-panel-title">Configure widget</div>
