--- a/ui/src/app/data-explorer/components/panel/data-explorer-dashboard-panel.component.html
+++ b/ui/src/app/data-explorer/components/panel/data-explorer-dashboard-panel.component.html
@@ -41,7 +41,7 @@
                 #dashboardGrid
                 [editMode]="editMode"
                 [dashboard]="dashboard"
-                [viewDateRange]="viewDateRange"
+                [timeSettings]="timeSettings"
                 (configureWidgetCallback)="updateCurrentlyConfiguredWidget($event)"
                 (updateCallback)="updateAndQueueItemForDeletion($event)"
                 (deleteCallback)="removeAndQueueItemForDeletion($event)"
