--- a/ui/src/app/data-explorer/components/widgets/utils/no-data/no-data-in-date-range.component.html
+++ b/ui/src/app/data-explorer/components/widgets/utils/no-data/no-data-in-date-range.component.html
@@ -23,7 +23,7 @@
     </div>
     <div fxLayout="column" fxLayoutAlign="center center" style="margin-top: 30px">
         <div class="default-text">Found no data in selected time range</div>
-        <div class="default-text date-range-text">{{viewDateRange.startDate | date:'MM/dd/yyyy HH:mm'}} - {{viewDateRange.endDate | date:'MM/dd/yyyy HH:mm'}}</div>
+        <div class="default-text date-range-text">{{viewDateRange.startTime | date:'MM/dd/yyyy HH:mm'}} - {{viewDateRange.endTime | date:'MM/dd/yyyy HH:mm'}}</div>
 
     </div>
 </div>
