--- a/ui/src/app/data-explorer/data-explorer.component.html
+++ b/ui/src/app/data-explorer/data-explorer.component.html
@@ -41,7 +41,7 @@
             </button>
         </div>
         <div class="data-explorer-options-item" fxLayoutAlign="end center" fxFlex fxLayout="row">
-            <sp-time-range-selector *ngIf="selectedIndex" (dateRangeEmitter)="updateDateRange($event)"></sp-time-range-selector>
+            <sp-time-range-selector *ngIf="selectedIndex" (dateRangeEmitter)="updateDateRange($event)" [dateRange]="selectedDataViewDashboard.dashboardTimeSettings"></sp-time-range-selector>
         </div>
 <!--        <div class="data-explorer-options-item" fxLayoutAlign="start center" fxLayout="row">-->
 <!--            <button mat-button mat-icon-button color="primary"-->
@@ -63,7 +63,7 @@
                                           #dashboardPanel
                                           [(editMode)]="editMode"
                                           [dashboard]="selectedDataViewDashboard"
-                                          [viewDateRange]="viewDateRange"
+                                          [timeSettings]="selectedDataViewDashboard.dashboardTimeSettings"
                                           class="dashboard-panel" *ngIf="dashboardTabSelected">
         </sp-data-explorer-dashboard-panel>
     </div>
