--- a/ui/src/app/data-explorer/components/grid/data-explorer-dashboard-grid.component.scss
+++ b/ui/src/app/data-explorer/components/grid/data-explorer-dashboard-grid.component.scss
@@ -17,7 +17,7 @@
  */
 
 gridster.custom-gridster-style ::ng-deep {
-    background: var(--color-bg-3);
+    background: var(--color-bg-0);
 }
 
 gridster.custom-gridster-style.edit ::ng-deep {
@@ -38,4 +38,8 @@ gridster.scrollVertical ::ng-deep {
 ::ng-deep gridster.custom-gridster-style>div.gridster-column {
     border-left: 1px solid var(--color-bg-1);
     border-right: 1px solid var(--color-bg-1);
+}
+
+.shadow {
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
 }
