--- a/ui/src/app/data-explorer/components/widgets/table/table-widget.component.html
+++ b/ui/src/app/data-explorer/components/widgets/table/table-widget.component.html
@@ -16,7 +16,7 @@
   ~
   -->
 
-<div class="widget-content" [ngStyle]="{height: gridsterItemComponent.height}">
+<div class="widget-content" [ngStyle]="{height: gridsterItemComponent.height, background: dataExplorerWidget.baseAppearanceConfig.backgroundColor, color: dataExplorerWidget.baseAppearanceConfig.textColor}">
     <div class="widget-inner-content">
 <!--    <div style=" overflow-y: auto;" [style.max-height.px]="gridsterItem.rows * 100 - 40">-->
 
